--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -6,3 +6,11 @@
 @import '5-components/5-components';
 @import '6-templates/6-templates';
 @import 'themes/default';
+
+// My main Sass file.
+$mdc-theme-primary: #9c27b0;
+$mdc-theme-secondary: #76ff03;
+$mdc-theme-background: #fff;
+
+
+// @import "material-components-web/material-components-web";
