--- a/src/stylesheets/6-templates/_home.scss
+++ b/src/stylesheets/6-templates/_home.scss
@@ -6,7 +6,7 @@
     box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.35);
     background-color: $brand-purple;
     color: #fff;
-    padding: 16px 30px;
+    padding: 9px 30px;
     font: $font-bold;
     display: flex;
     align-items: center;
@@ -24,19 +24,61 @@
 
 /* CSS for Steps */
 .do-steps-container{
+    position: relative;
     padding: 60px 0px;
 }
 .do-step-container{
     align-items: flex-start;
+    &.active{
+        .do-step-status{
+            border-color: $brand-color;
+            .active{
+                opacity: 1;
+                transition: .3s;
+    
+            }
+            ~.do-step-arrow{
+                opacity: 1;
+                color: $brand-color;
+            }
+        }
+        .do-step-heading{
+            .do-step-heading-text{
+                color: $brand-color;
+            }
+        }
+        .do-step-body{
+            z-index: 1;
+            opacity: 1;
+        }
+    }
+    &.done{
+        .do-step-status{
+            .done{
+                opacity: 1;
+                transition: .3s;
+            }
+            ~.do-step-arrow{
+                color: $text-color;
+                opacity: 1;
+            }
+        }
+        .do-step-heading{
+            .do-step-heading-text{
+                color: $text-color;
+            }
+        }
+    }
 }
 .do-step-heading{
     display: flex;
     align-items: center;
+    margin-bottom: 20px;
     
     .do-step-heading-text{
         font: $font-regular;
         padding: 0px 20px;
-        color: $brand-color;
+        color: $mid-grey;
     }
     .do-step-arrow{
         opacity: 0;
@@ -46,7 +88,7 @@
     width: 24px;
     height: 24px;
     display: inline-flex;
-    border: 1px solid $text-color;
+    border: 1px solid $mid-grey;
     border-radius: 50%;
     justify-content: center;
     align-items: center;
@@ -78,32 +120,14 @@
         border-radius: 50%;
         background-color: $brand-color;
     }
-
-    &.active{
-        border-color: $brand-color;
-        .active{
-            opacity: 1;
-            transition: .3s;
-
-        }
-        ~.do-step-arrow{
-            opacity: 1;
-            color: $brand-color;
-        }
-    }
-    &.done{
-        .done{
-            opacity: 1;
-            transition: .3s;
-        }
-        ~.do-step-arrow{
-            color: $text-color;
-            opacity: 1;
-        }
-    }
     
 }
-
+.do-step-body{
+    position: absolute;
+    z-index: 0;
+    opacity: 0;
+    top: 45px;
+}
 
 #onboarded-button{
     margin: 40px 0px 20px 0px;
