--- a/src/stylesheets/3-base/_global.scss
+++ b/src/stylesheets/3-base/_global.scss
@@ -74,9 +74,25 @@
     flex-direction: column;
   }
 }
+.align-bottom{
+  align-self: flex-end;
+}
+.divider{
+  background-color: #f2f2fd;
+  width: 100%;
+  height: 1px;
+  margin: 20px 0px;
+  display: block;
+}
 .text-center{
   text-align: center;
 }
+.text-right{
+  text-align: right;
+}
 .underlined{
   text-decoration: underline;
+}
+.noMargin{
+  margin: 0px;
 }
