--- a/src/stylesheets/4-layout/_header.scss
+++ b/src/stylesheets/4-layout/_header.scss
@@ -21,3 +21,28 @@
         background-color: $brand-purple;
     }
 }
+
+@media (max-width: $screen-sm-max) {
+    .do-reward-header{
+        // padding: 0px 30px;
+        height: auto;
+        img{
+            width: auto;
+            margin-left: 30px;
+        }
+        h2,.do-reward-header-text{
+         width: auto;
+         margin: 0px;
+         flex: 1;   
+        }
+        button{
+            background-color: $brand-purple;
+        }
+    }
+    .reward-points{
+        margin: 0px;
+        padding: 60px 30px;
+        padding-bottom: 0px;
+        background: #fff;
+    }
+}
