--- a/src/stylesheets/5-components/_modal.scss
+++ b/src/stylesheets/5-components/_modal.scss
@@ -81,3 +81,18 @@
         transform: scale(1);
     }
 }
+
+
+@media (max-width: $screen-sm-max){
+    .modal{
+        padding: 0px;
+
+        .modal-body{
+                width: 100%;
+                height: 100vh;
+                top: 0px;
+                margin-top: 0px;
+                padding: 40px 20px;
+        }
+    }
+}
