add error text on card

--- a/src/stylesheets/6-templates/_home.scss
+++ b/src/stylesheets/6-templates/_home.scss
@@ -221,6 +221,14 @@
     // margin-bottom: 37px;
     display: inline-block;
 }
+.card-error-text{
+    position: absolute;
+    font-size: 10px;
+    width: 78px;
+    left: 208px;
+    top: 80px;
+    color: #f74747;
+}
 
 @media (max-width: $screen-sm-max) {
 
