--- a/src/stylesheets/3-base/_global.scss
+++ b/src/stylesheets/3-base/_global.scss
@@ -29,7 +29,9 @@ body{
   padding-right: 20px; /* 3 */
   width: 100%; /* 1 */
  }
-
+.relative{
+  position: relative;
+}
 /**
  * Hide text while making it readable for screen readers
  * 1. Needed in WebKit-based browsers because of an implementation bug;
