--- a/src/stylesheets/5-components/_form.scss
+++ b/src/stylesheets/5-components/_form.scss
@@ -99,7 +99,8 @@ input[type=number]::-webkit-outer-spin-button {
 }
 .do-input-checkbox{
     input{
-        margin-right: 10px;
+        width: 0px;
+        height: 0px;
     }
 }
 // Checkbox
@@ -121,7 +122,7 @@ $md-checkbox-label-padding: .75em;
   position: relative;
   margin: $md-checkbox-margin;
   text-align: left;
-
+  padding-left: 30px;
   &.md-checkbox-inline {
     display: inline-block;
   }
@@ -168,6 +169,9 @@ $md-checkbox-label-padding: .75em;
     margin: 0 10px 0 0;
     display: inline-flex;
     font-size: inherit;
+    width: 0px;
+    height: 0px;
+    margin: 0px;
     &:checked {
         + label:before{
             background: $brand-color;
