--- a/src/stylesheets/6-templates/_home.scss
+++ b/src/stylesheets/6-templates/_home.scss
@@ -208,6 +208,11 @@
     margin: 10px 0px;
     display: inline-block;
 }
+#skipOnboarding img{
+    margin-bottom: 40px;
+    width: 100%;
+    max-width: 276px;
+}
 .card-error-text{
     position: absolute;
     font-size: 10px;
