--- a/src/stylesheets/3-base/_global.scss
+++ b/src/stylesheets/3-base/_global.scss
@@ -63,6 +63,7 @@ body{
 .do-wrapper{
   max-width: 1200px;
   margin: auto;
+  padding: 0px 30px;
 }
 .flex{
   display: flex;
@@ -107,6 +108,9 @@ body{
 }
 .sm-hidden{
   display: inherit;
+}
+.full-width{
+  width: 100%;
 }
 @media (max-width: $screen-sm-max) {
   .sm-hidden{
