--- a/src/stylesheets/6-templates/_home.scss
+++ b/src/stylesheets/6-templates/_home.scss
@@ -87,6 +87,7 @@
         padding: 0px 20px;
         color: $mid-grey;
         line-height: 24px;
+        flex:1;
         pointer-events: none;
         &.clickable{
             cursor: pointer;
@@ -149,14 +150,16 @@
     z-index: 0;
     opacity: 0;
     top: 60px;
-    max-width: calc(66.666667% + 13px);
-    left: -3px;
+    width: calc(66.666667% + 13px);
+    max-width: unset;
+    left: 0px;
     min-height: 580px;
     padding-bottom: 60px;
     transition: 1s;
     z-index: 0;
     opacity: 0;
     background: #fff;
+    margin-left: calc(33.33% - 3px);
     &.hidden{
         z-index: 0;
         opacity: 0;
@@ -217,8 +220,9 @@
     position: absolute;
     font-size: 10px;
     width: 78px;
-    left: 208px;
-    top: 80px;
+    right: 15px;
+    top: 71px;
+    left:auto;
     color: #f74747;
 }
 
