--- a/src/stylesheets/6-templates/_home.scss
+++ b/src/stylesheets/6-templates/_home.scss
@@ -206,6 +206,13 @@
     right: 0px;
     bottom: 80px;
 }
+.skip-link-mobile{
+    position: relative;
+    display: block;
+    margin-top: 60px;
+    text-align: center;
+    margin-bottom: 190px;
+}
 #do-terms-checkbox{
     // margin-bottom: 37px;
     margin: 10px 0px;
