--- a/src/stylesheets/5-components/_form.scss
+++ b/src/stylesheets/5-components/_form.scss
@@ -56,7 +56,9 @@ input[type=number]::-webkit-outer-spin-button {
         margin-right: 20px;
         margin-bottom: 0px;
     }
-
+    a{
+      align-self: center;
+    }
 
     &.vertical{
         flex-direction: column;
@@ -290,6 +292,9 @@ $md-checkbox-label-padding: .75em;
           &:last-of-type{
             margin-bottom: 0px;
           }
+      }
+      a{
+        margin: 20px 0px;
       }
   }
 }
