--- a/src/stylesheets/3-base/_global.scss
+++ b/src/stylesheets/3-base/_global.scss
@@ -129,7 +129,7 @@ body{
   width: 100%;
 }
 .sm-visible{
-  display: none;
+  display: none !important; 
 }
 @media (max-width: $screen-sm-max) {
   .sm-hidden{
