added flow changes

--- a/src/stylesheets/3-base/_global.scss
+++ b/src/stylesheets/3-base/_global.scss
@@ -136,7 +136,7 @@ body{
     display: none;
   }
   .sm-visible{
-    display: block;
+    display: block !important;
   }
   body{
     overflow-x: hidden;
