changes in bold font

--- a/src/stylesheets/6-templates/_home.scss
+++ b/src/stylesheets/6-templates/_home.scss
@@ -201,6 +201,9 @@
             font-weight: 700;
         }
     }
+    b{
+        font-weight: 600;
+    }
     .section-col-5{
         width: 62.5%;
         padding: 0px 10px;
